[gd_scene load_steps=2 format=3 uid="uid://ckgma02g8s4w8"]

[ext_resource type="Script" path="res://scripts/UI/HostMenu.gd" id="1_4ajl4"]

[node name="HostMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -78.5
offset_right = 78.5
offset_bottom = 23.0
grow_horizontal = 2
text = "Héberger une partie"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
script = ExtResource("1_4ajl4")

[node name="Online" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Héberger en ligne
"

[node name="Local" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Héberger localement"

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Retour"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Online" to="MarginContainer/VBoxContainer" method="_on_online_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Local" to="MarginContainer/VBoxContainer" method="_on_local_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="MarginContainer/VBoxContainer" method="_on_back_pressed"]
